feat: Add sentiment detection for negative tweets

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "twit": "^2.2.4"
+    "twit": "^2.2.4",
+    "unirest": "^0.5.1"
   },
   "repository": {
     "type": "git",
