--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "fs-extra": "^2.0.0",
     "twit": "^2.2.4",
     "unirest": "^0.5.1",
-    "unique-random-array": "*"
+    "unique-random-array": "*",
+    "level": "*"
   },
   "repository": {
     "type": "git",
