--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "100daysofcodebot",
   "version": "1.0.2",
   "description": "#100daysofcode bot",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
