use exact verions of dependencies

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "fs-extra": "^2.0.0",
-    "twit": "^2.2.4",
-    "unirest": "^0.5.1",
+    "fs-extra": "2.0.0",
+    "twit": "2.2.4",
+    "unirest": "0.5.1",
     "unique-random-array": "*",
     "level": "*"
   },
