fix: correct author info

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node": "~6.1.0",
     "npm": "~.3.8.6"
   },
-  "author": "aman mittal <@amanhimself>",
+  "author": "aman mittal <@amandeepmittal>",
   "bugs": {
     "url": "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot/issues"
   },
