add .env to git ignore

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-CONSUMER_KEY=AmMSbu2vMs9sjo5Nh4BcdMhxg
-CONSUMER_SECRET=eQUfMrHbtlXVC9dhXUzwkFNNj1H107PFv1mvWwEM6CZH0fjymV
-ACCESS_TOKEN=744878492-uEcacdl7HJ1Xb7vAyNpSecKpi90bFhdsGG2N7iII
-ACCESS_TOKEN_SECRET=77vGPTt20x4lsEQZ0mw2ZAU8wNKAPU8Qz2c0PhOo43cGO
-SENTIMENT_KEY=QqtO3XbGhFmshEmKBxy58FqKLvG3p1rx61ijsnaHTstuRd3jp0
+CONSUMER_KEY=
+CONSUMER_SECRET=
+ACCESS_TOKEN=
+ACCESS_TOKEN_SECRET=
+SENTIMENT_KEY=
