--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,10 @@ gen
 # VSCODE
 .vscode
 
-# Environment Variables
-*.env
+# OS files
+.DS_Store
+*Thumbs.db
+
+src/helpers/blacklistUsersDb
+
+.package.json
