use dotenv clean working tree this time

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": " BSD 3-Clause License",
   "dependencies": {
     "contributor": "0.1.25",
+    "dotenv": "^4.0.0",
     "fs-extra": "2.0.0",
     "level": "*",
     "node-schedule": "1.2.1",
