--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "standard && node index.js"
+    "test": "jest --coverage",
+    "dev": "jest --coverage && node index.js && nodemon -e"
   },
   "keywords": [
     "#100daysofcode",
@@ -24,6 +25,10 @@
     "url": "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot/issues"
   },
   "license": " BSD 3-Clause License",
+  "devDependencies": {
+    "jest-cli": "^19.0.2",
+    "nodemon": "^1.11.0"
+  },
   "dependencies": {
     "contributor": "0.1.25",
     "dotenv": "^4.0.0",
