--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
     "fs-extra": "2.0.0",
     "level": "1.6.0",
     "node-schedule": "1.2.1",
+    "retext-english": "^3.0.0",
+    "retext-sentiment": "^4.1.0",
+    "snyk": "^1.34.3",
     "twit": "2.2.5",
+    "unified": "^6.1.6",
     "unique-random-array": "1.0.0",
     "unirest": "0.5.1",
-    "snyk": "^1.34.3"
+    "unist-util-inspect": "^4.1.1"
   },
   "repository": {
     "type": "git",
