--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "snyk test && jest --coverage",
+    "test": "snyk test && jest --coverage --watch *.js",
     "dev": "jest --coverage && nodemon index.js ",
     "snyk-protect": "snyk protect",
     "snyk-wizard": "snyk wizard",
