--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "100daysofcodebot",
   "version": "2.9.0",
-  "description": "#100daysofcode bot for Free Code Camp",
+  "description": "#100DaysOfCode bot for Free Code Camp",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -14,6 +14,7 @@
   },
   "keywords": [
     "#100daysofcode",
+    "#100DaysOfCode",
     "Twitter",
     "JavaScript",
     "Nodejs",
@@ -133,6 +134,15 @@
       "contributions": 3,
       "additions": 9,
       "deletions": 7,
+      "hireable": true
+    },
+    {
+      "name": "Kaustubh",
+      "email": null,
+      "url": "https://github.com/kayd33",
+      "contributions": 3,
+      "additions": 0,
+      "deletions": 1,
       "hireable": true
     }
   ],
