--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "npm": "5.6.0"
   },
   "devDependencies": {
-    "nodemon": "1.17.1",
+    "husky": "0.14.3",
     "jest-cli": "22.4.2",
-    "prettier": "^1.8.2"
+    "nodemon": "1.17.1",
+    "prettier": "1.11.1",
+    "pretty-quick": "1.4.1"
   },
   "dependencies": {
     "contributor": "0.1.25",
