--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "test": "snyk test && jest --coverage --watch *.js",
     "dev": "jest --coverage && nodemon index.js ",
+    "lint": "eslint ./src",
     "snyk-protect": "snyk protect",
     "snyk-wizard": "snyk wizard",
     "prepublish": "npm run snyk-protect",
@@ -33,6 +34,10 @@
     "npm": "5.6.0"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.12.0",
     "husky": "0.14.3",
     "jest-cli": "22.4.2",
     "nodemon": "1.17.1",
