--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "100DaysOfCodeBot",
-  "version": "2.10.0",
+  "version": "2.11.0",
   "description": "#100DaysOfCode bot for Free Code Camp",
   "main": "index.js",
   "scripts": {
@@ -25,12 +25,11 @@
   ],
   "author": "Amandeepmittal <@amandeepmittal>",
   "bugs": {
-    "url":
-      "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot/issues"
+    "url": "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot/issues"
   },
   "license": " BSD 3-Clause License",
   "engines": {
-    "node": "8.9.2",
+    "node": "8.11.1",
     "npm": "5.6.0"
   },
   "devDependencies": {
@@ -61,8 +60,7 @@
   },
   "repository": {
     "type": "git",
-    "url":
-      "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot.git"
+    "url": "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot.git"
   },
   "homepage": "https://github.com/freeCodeCamp/100DaysOfCode",
   "contributors": [
