--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "100DaysOfCodeBot",
-  "version": "2.14.0",
+  "version": "3.1.0",
   "description": "#100DaysOfCode bot for Free Code Camp",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,7 @@
     "npm",
     "retweet"
   ],
-  "author": "Amandeepmittal <@amandeepmittal>",
+  "author": "Amandeepmittal <amanhimself.dev>",
   "bugs": {
     "url":
       "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot/issues"
@@ -34,30 +34,23 @@
     "npm": "5.6.0"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.12.0",
-    "husky": "0.14.3",
-    "jest-cli": "22.4.2",
-    "nodemon": "1.17.1",
-    "prettier": "1.11.1",
-    "pretty-quick": "1.4.1"
+    "eslint-config-amanhimself": "^1.1.13",
+		"nodemon": "1.17.1",
+		"pretty-quick": "1.4.1"
   },
   "dependencies": {
-    "contributor": "0.1.25",
-    "dotenv": "^5.0.0",
-    "fs-extra": "5.0.0",
-    "level": "3.0.0",
-    "moment": "2.21.0",
-    "node-schedule": "1.3.0",
-    "positivity-api": "1.2.0",
-    "retext-english": "^3.0.0",
-    "retext-sentiment": "^4.1.0",
-    "snyk": "1.70.3",
-    "twit": "2.2.9",
-    "unified": "^6.1.6",
-    "unique-random-array": "1.0.1"
+   	"contributor": "0.1.25",
+		"dotenv": "^5.0.0",
+		"fs-extra": "5.0.0",
+		"level": "^4.0.0",
+		"moment": "2.21.0",
+		"node-schedule": "1.3.0",
+		"positivity-api": "1.2.0",
+		"retext-english": "^3.0.0",
+		"retext-sentiment": "^4.1.0",
+		"twit": "^2.2.11",
+		"unified": "^6.1.6",
+		"unique-random-array": "1.0.1"
   },
   "repository": {
     "type": "git",
