--- a/package.json
+++ b/package.json
@@ -1,61 +1,33 @@
 {
   "name": "100DaysOfCodeBot",
-  "version": "3.1.0",
-  "description": "#100DaysOfCode bot for Free Code Camp",
+  "version": "3.3.0",
+  "description": "#100DaysOfCode bot for freeCodeCamp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "snyk test && jest --coverage --watch *.js",
-    "dev": "jest --coverage && nodemon index.js ",
-    "lint": "eslint ./src",
-    "snyk-protect": "snyk protect",
-    "snyk-wizard": "snyk wizard",
-    "prepublish": "npm run snyk-protect",
-    "format": "pretty-quick"
+    "start": "node index.js"
   },
-  "precommit": "pretty-quick --staged",
   "keywords": [
     "#100daysofcode",
     "#100DaysOfCode",
     "Twitter",
     "JavaScript",
     "Nodejs",
-    "npm",
-    "retweet"
+    "npm"
   ],
-  "author": "Amandeepmittal <amanhimself.dev>",
+  "author": "Aman Mittal <amanhimself.dev>",
   "bugs": {
-    "url":
-      "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot/issues"
+    "url": "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot/issues"
   },
   "license": " BSD 3-Clause License",
-  "engines": {
-    "node": "8.11.1",
-    "npm": "5.6.0"
-  },
-  "devDependencies": {
-    "eslint-config-amanhimself": "^1.1.13",
-		"nodemon": "1.17.1",
-		"pretty-quick": "1.4.1"
-  },
   "dependencies": {
-   	"contributor": "0.1.25",
-		"dotenv": "^5.0.0",
-		"fs-extra": "5.0.0",
-		"level": "^4.0.0",
-		"moment": "2.21.0",
-		"node-schedule": "1.3.0",
-		"positivity-api": "1.2.0",
-		"retext-english": "^3.0.0",
-		"retext-sentiment": "^4.1.0",
-		"twit": "^2.2.11",
-		"unified": "^6.1.6",
-		"unique-random-array": "1.0.1"
+    "contributor": "0.1.25",
+    "dotenv": "^5.0.0",
+    "node-schedule": "1.3.0",
+    "twit": "^2.2.11"
   },
   "repository": {
     "type": "git",
-    "url":
-      "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot.git"
+    "url": "https://github.com/freeCodeCamp/100DaysOfCode-twitter-bot.git"
   },
   "homepage": "https://github.com/freeCodeCamp/100DaysOfCode",
   "snyk": true,
